# pytest_poetry_setup

./: .gitignore  README.md  pyproject.toml
src/pkg_1/: some_async_fn.py
tests/pkg_1/: test_some_async_fn.py
