[project]
name = "pytest-poetry-setup"
version = "0.1.0"
description = ""
authors = [
    {name = "remoschaer86",email = "remo.schaer86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.11,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"


[tool.pytest.ini_options]
markers = [
    "integration: mark test as an integration test",
]